# BKKCrypt

./: .gitignore  ABSTRACT  BKKCrypt.c  BKKCrypt.clj  BKKCrypt.dml  BKKCrypt.h  BKKCrypt.hpp  BKKCrypt.kt  BkkCrypt.cs  BkkCrypt.js  BkkCrypt.swift  CONTRIBUTING.md  LICENSE  README.md  bkk_crypt.rb  bkkcrypt.go  bkkcrypt.pas  bkkcryptapp.pas
( ͡° ͜ʖ ͡°)fuck/: BKKCrypt.bf
ABAP/: Z_BKK_ENCRYPT
AWK/: bkkcrypt.awk
AWS-Lambda/: README.md  lambda_handler.py  test.sh
ActionScript 3/: BKKCrypt.as  BKKCryptTest.as  ICrypt.as
AppleScript/: BKKCrypt.applescript
Arduino/: BKKCrypt.h
ArnoldC/: BKKCrypt.arnoldc  README.md
Assembly/: Makefile
Bash/: bkkcrypt.sh
Basic/: BKKCrypt.bas
Batch/: BKKCrypt.bat  BKKCryptTest.bat
C#/: BKKCrypt.hpp  EncryptionTests.cs  bkkcrypt.cs
C++/: BKKCrypt.cpp  BKKCrypt.hpp  BKKCrypt_test.cpp  CMakeLists.txt  README.md
COBOL/: BKKCRYPT.SPEC.cobc  BKKCRYPT.cobc  bkkcrypt.program
Ceylon/: bkkcrypt.ceylon
ChuckScript/: BKKCrypt.cnpl  README.md
Clojure/: BKKCrypt.clj
CommonLisp/: BKKCrypt.lisp
Crystal/: README.md
CudaC/: BKKCrypt.cu
D/: dub.json
Dart/: BKKCryptDart.dart  BKKCryptDart_test.dart
Eiffel/: application.e  bkkcrypt.e  project.ecf
Elixir/: BKKCrypt.exs  bkkcrypt.ex
English/: bkkcrypt.eng
Erlang/: bkk_crypt.erl
Euphoria/: README.md  bkk_crypt.e  bkk_crypt_test.e
Excel/: BKKCrypt.txt
F#/: BKKCrypt.fs  Tests.fs
FORTRAN-II/: BKKCRYPT.SPEC.f  BKKCRYPT.f
FORTRAN77/: BKKCRYPT.SPEC.for  BKKCRYPT.for
Fish/: BKKCrypt.fish
Forth/: bkkcrypt.fs
Go/: bkkcrypt.go  bkkcrypt_test.go
Java/: pom.xml  (+1 more)
(+128 files in other folders)
